<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">

            <TextView
                android:id="@+id/settingsTitle"
                style="@style/Theme.BottleRocket.TextView"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_gravity="center"
                android:layout_marginHorizontal="32dp"
                android:layout_marginTop="32dp"
                android:text="@string/option_settings"
                android:textAlignment="center"
                android:textSize="10pt" />

            <TextView
                android:id="@+id/apiServerUrlTitle"
                style="@style/Theme.BottleRocket.TextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:text="@string/api_server_url_title"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/apiServerUrlHelper"
                style="@style/Theme.BottleRocket.TextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:text="@string/api_server_url_helper"
                android:textSize="14sp" />

            <EditText
                android:id="@+id/urlInput"
                style="@style/Theme.BottleRocket.EditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:inputType="textUri" />

            <TextView
                android:id="@+id/apiServerCredentialsTitle"
                style="@style/Theme.BottleRocket.TextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:text="@string/credentials"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/apiServerCredentialsUserHelper"
                style="@style/Theme.BottleRocket.TextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:text="@string/user_name"
                android:textSize="14sp" />

            <EditText
                android:id="@+id/credentialsUserInput"
                style="@style/Theme.BottleRocket.EditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="24dp"
                android:inputType="text" />

            <TextView
                android:id="@+id/apiServerCredentialsPasswordHelper"
                style="@style/Theme.BottleRocket.TextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:text="@string/password"
                android:textSize="14sp" />

            <EditText
                android:id="@+id/credentialsPasswordInput"
                style="@style/Theme.BottleRocket.EditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="24dp"
                android:inputType="textPassword" />

            <ProgressBar
                android:id="@+id/progressBar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="16dp"
                android:visibility="gone" />

            <Button
                android:id="@+id/saveButton"
                style="@style/Theme.BottleRocket.Button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:text="@string/save" />

            <Button
                android:id="@+id/resetButton"
                style="@style/Theme.BottleRocket.Button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:text="@string/reset_to_default" />

            <Button
                android:id="@+id/testConnectionButton"
                style="@style/Theme.BottleRocket.Button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:text="@string/test_connection" />

            <Button
                android:id="@+id/cancelButton"
                style="@style/Theme.BottleRocket.Button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:text="@string/option_go_back" />

        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>