<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bottle_rocket_dark">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="24dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/apiServerUrlHelper"
            style="@style/Theme.BottleRocket.Warning"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="18dp"
            android:text="@string/warning_server"
            android:textAlignment="center"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/retryButton"
            style="@style/Theme.BottleRocket.Button"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginHorizontal="32dp"
            android:layout_marginVertical="10dp"
            android:text="@string/retry" />

        <Button
            android:id="@+id/continueButton"
            style="@style/Theme.BottleRocket.Button"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginHorizontal="32dp"
            android:layout_marginVertical="16dp"
            android:enabled="true"
            android:text="@string/continue_to_main" />

        <Button
            android:id="@+id/settingsButton"
            style="@style/Theme.BottleRocket.Button"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginHorizontal="32dp"
            android:layout_marginVertical="16dp"
            android:text="@string/option_settings" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>