<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="32dp"
            android:layout_marginVertical="32dp"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="240dp"
                android:layout_height="240dp"
                android:layout_gravity="center"
                android:layout_marginHorizontal="0dp"
                android:layout_marginVertical="40dp"
                android:contentDescription="@string/bottle_rocket_logo"
                android:src="@mipmap/ic_launcher" />

            <TextView
                android:id="@+id/textView"
                style="@style/Theme.BottleRocket.TextView"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_gravity="center"
                android:layout_marginHorizontal="32dp"
                android:layout_marginVertical="16dp"
                android:text="@string/app_name"
                android:textAlignment="center"
                android:textSize="12pt" />

            <Button
                android:id="@+id/captureButton"
                style="@style/Theme.BottleRocket.Button"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginHorizontal="32dp"
                android:layout_marginVertical="16dp"
                android:enabled="true"
                android:text="@string/option_begin_capture" />

            <Button
                android:id="@+id/settingsButton"
                style="@style/Theme.BottleRocket.Button"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginHorizontal="32dp"
                android:layout_marginVertical="16dp"
                android:text="@string/option_settings" />

            <Button
                android:id="@+id/exitButton"
                style="@style/Theme.BottleRocket.Button"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginHorizontal="32dp"
                android:layout_marginVertical="16dp"
                android:enabled="true"
                android:text="@string/option_exit" />

            <TextView
                android:id="@+id/versionNumber"
                style="@style/Theme.BottleRocket.TextView"
                android:layout_width="match_parent"
                android:layout_height="32dp"
                android:layout_gravity="end"
                android:layout_marginHorizontal="32dp"
                android:layout_marginVertical="16dp"
                android:textAlignment="textEnd"
                android:textSize="5pt" />

        </LinearLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>