<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginHorizontal="32dp"
        android:layout_marginVertical="32dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:id="@+id/textView"
            style="@style/Theme.BottleRocket.TextView"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_gravity="center"
            android:layout_marginHorizontal="32dp"
            android:layout_marginTop="32dp"
            android:text="@string/image_preview"
            android:textAlignment="center"
            android:textSize="10pt" />

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:layout_marginHorizontal="0dp">

        <ImageView
            android:id="@+id/previewView"
            style="@style/Theme.BottleRocket.BorderedImageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:adjustViewBounds="true"
            android:scaleType="fitCenter" />

        </FrameLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:orientation="horizontal">

            <ImageButton
                android:id="@+id/cancelButton"
                style="@style/Theme.BottleRocket.Button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_weight="1"
                android:contentDescription="@string/option_go_back"
                android:enabled="true"
                app:srcCompat="@drawable/baseline_arrow_back_ios_new_24"
                app:tint="@android:color/white" />

            <ImageButton
                android:id="@+id/sendButton"
                style="@style/Theme.BottleRocket.Button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_weight="1"
                android:contentDescription="@string/option_send"
                android:enabled="true"
                app:srcCompat="@drawable/baseline_send_24"
                app:tint="@android:color/white" />

        </LinearLayout>

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>